# learn-typedb

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  tax_calculation.dot  tax_calculation.json  tax_calculation_tree.txt
data/: sample-tax-data-v3.tql
docs/: typedb-for-tax-systems.md
examples/: parse_functions.rs
exercises/: 00a-define-attributes.tqls  00b-define-entities.tqls  00c-define-relations.tqls  00d-define-advanced-schema.tqls  00d1-expressions-operators.tqls  00d2-reduction-aggregates.tqls  00d3-define-functions.tqls  00d4-functions-with-relations.tqls  00d5-query-with-functions.tqls  00d6-audit-calculation-lineage.tqls  00d6-audit-calculation-walkthrough.tqls  00d7-query-audit-trails.tqls  00d7-query-audit-walkthrough.tqls  00e-insert-data.tqls  00f-delete-data.tqls  00g-update-data.tqls  01-list-all-taxpayers.tqls  02-find-required-fields.tqls  02a-data-migration.tqls  03-forms-by-category.tqls  04-field-dependencies-reverse.tqls  05-form-field-sections.tqls  06-validation-with-fields.tqls  07-tax-year-form-comparison.tqls  08-calculation-dependency-chain.tqls  09-complete-tax-workflow.tqls  README.md
queries/: 01-count-entities.tqls  02-list-form-types.tqls  03-form-fields.tqls  04-field-dependencies.tqls  05-validation-rules.tqls  06-calculations.tqls  07-taxpayer-info.tqls  08-form-dependencies.tqls  09-forms-by-year.tqls  10-calculation-chain.tqls  README.md  field-dependency-tree.tqls
schemas/: tax-schema-v3.tql
scripts/: README_AUDIT_TRAIL.md  query_examples.py  setup_audit_trail.py  setup_database_simple.py  (+3 more)
(+15 files in other folders)
